--- a/app/CSS/models.css
+++ b/app/CSS/models.css
@@ -1,5 +1,5 @@
 /* Home icon */
-.home {
+.buttons {
     float: left;
     margin-top: 5px;
     margin-left: 5px;
@@ -8,14 +8,12 @@
   
   /* Select an option text */
  .option {
-    text-align: center;
-    float: left;
-    margin-top: 15px;
+    margin-top: 8px;
     font-family: 'Montserrat', sans-serif;
-    width: 90%
   }
 
   .top {
+    margin-top: 2px;
     margin-bottom: 25px;
   }
 
