--- a/app/CSS/models.css
+++ b/app/CSS/models.css
@@ -26,16 +26,19 @@
   }
 
   .lvls-option {
-    width: 88%;
+    width: 95%;
     margin: auto;
-    margin-bottom: 2%;
+    margin-bottom: 5%;
   }
 
   .models-option {
     width: 58%;
-    margin-left: auto;
-    margin-right: auto;
+    left: 50%;
+    position: absolute;            
+    top: 60%;                         
+    transform: translate(-50%, -60%);
   }
+
 
   .work {
     height: 300px;
