--- a/app/CSS/global-styles.css
+++ b/app/CSS/global-styles.css
@@ -1,17 +1,21 @@
 .top-margin{
-    margin-top: 2% 
+    margin-top: 2%
 }
 
 .center-content{
-    margin: 0;
-    position: absolute;            
-    top: 45%;                         
-    transform: translate(0, -45%);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 99%;
+    padding: 5% 0;
 }
 
 .bottom-bar {
-    position: absolute; 
-    bottom: 20px;
+    position: fixed;
+    left: 0;
+    width: 100%;
+    bottom: 10px;
+    text-align: center;
 }
 
 .max-size {
@@ -35,4 +39,4 @@
 
 .progress-position {
     margin-top:11px;
-  }
+}
