--- a/app/ComponentDescription.css
+++ b/app/ComponentDescription.css
@@ -61,10 +61,10 @@ body {
 /*object-position: center; */
 img.left {
     position: absolute;
-    left: 50%;
+    left: 30%;
     top: 50%;
-    height: auto;
-    width: 100%;
+    height: 80%;
+    width: 80%;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
